Fazendo com que as abas fiquem marcadas corretamente.

--- a/trunk/templates/bkp/edit/edit_config.html
+++ b/trunk/templates/bkp/edit/edit_config.html
@@ -7,7 +7,7 @@
     <li><a href="{{script_name}}/config/dump_restore/edit"{% ifequal config_type 'dump_restore' %} class="ativo"{% endifequal %}>Dump e restauração</a></li>
     <li><a href="{{script_name}}/config/password/edit"{% ifequal config_type 'password' %} class="ativo"{% endifequal %}>Senha</a></li>
     <li><a href="{{script_name}}/config/devices/edit"{% ifequal config_type 'devices' %} class="ativo"{% endifequal %}>Dispositivos Externos</a></li>
-    <li><a href="{{script_name}}/config/restrictions/edit"{% ifequal config_type 'devices' %} class="ativo"{% endifequal %}>Restrições de Banda</a></li>
+    <li><a href="{{script_name}}/config/restrictions/edit"{% ifequal config_type 'restrictions' %} class="ativo"{% endifequal %}>Restrições de Banda</a></li>
 </ul>
 
 {% ifequal config_type 'global' %}
