--- a/trunk/templates/bkp/base.html
+++ b/trunk/templates/bkp/base.html
@@ -1,3 +1,4 @@
+{% load bkp_extras %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt-BR" lang="pt-BR">
@@ -17,10 +18,10 @@
                 <h1><a href="{{script_name}}/" title="Home">Linconet - Tencnologia Estratégica</a></h1>
                 <div id="main_menu" class="menu">
                     <ul class="links">
-                        <li class="active"><a href="{{script_name}}/backup" title="">Backup</a></li>
+                        <li {% if request.META.PATH_INFO|contains:"/computer" %}class="active"{% endif %}><a href="{{script_name}}/backup" title="">Backup</a></li>
                         <li class=""><a href="{{script_name}}/restore" title="">Restore</a></li>
-                        <li class=""><a href="{{script_name}}/stats" title="">Estatísticas</a></li>
-                        <li class=""><a href="{{script_name}}/config/edit" title="">Configurações</a></li>
+                        <li {% if request.META.PATH_INFO|contains:"/stats" %}class="active"{% endif %}><a href="{{script_name}}/stats" title="">Estatísticas</a></li>
+                        <li {% if request.META.PATH_INFO|contains:"/config" %}class="active"{% endif %}><a href="{{script_name}}/config/edit" title="">Configurações</a></li>
                     </ul>
                     {% if current_user.username %}
                     <form class="link" action="{{script_name}}/session/delete" method="post">
