--- a/trunk/templates/bkp/view/view_stats.html
+++ b/trunk/templates/bkp/view/view_stats.html
@@ -59,7 +59,7 @@
 </thead>
 <tbody>
 {% for job in lastjobs %}
-<tr> 
+<tr class="{% cycle 'odd' 'even' %}"> 
 <td> {{job.Name}} </td>
 <td> {{job.cName}} </td>
 <td> {{job.Level}} </td>
