--- a/trunk/templates/bkp/static/estilo.css
+++ b/trunk/templates/bkp/static/estilo.css
@@ -200,7 +200,7 @@ letter-spacing: -0.05em;
 }
 
 #sidebar .list_computers {
-margin-bottom: 20px;
+margin-bottom: 10px;
 }
 
 #sidebar .list_computers li {
@@ -222,6 +222,10 @@ color: #333;
 #sidebar .list_computers li span {
 float: right;
 color: #999;
+}
+
+#sidebar p {
+margin-bottom: 40px;
 }
 
 #main_content {
@@ -408,5 +412,6 @@ color: #999;
 font-size: 10px;
 color: #FFF;
 }
+
 
 
