--- a/trunk/templates/bkp/view/view_storage.html
+++ b/trunk/templates/bkp/view/view_storage.html
@@ -15,7 +15,7 @@
 	    </div>
 	</div>
 	
-	<div class="bloco_texto escondido" id="detalhes_computador">
+	<div class="bloco_texto" id="detalhes_computador">
 	    <ul class="aux">
 	        <li><strong class="label">IP:</strong> <span class="value">{{ storage.storage_ip }}</span></li>
 	        <li><strong class="label">Descrição:</strong> <span class="value">{{ storage.storage_description }}</span></li>
