--- a/trunk/templates/bkp/base.html
+++ b/trunk/templates/bkp/base.html
@@ -11,6 +11,8 @@
 		<link href="{{script_name}}/static/estilo.css" rel="stylesheet" />
 		<script type="text/javascript" src="{{script_name}}/static/jquery.js"></script>
 		<script type="text/javascript" src="{{script_name}}/static/main.js"></script>
+		
+		{% block headtags %}{% endblock %}
 	</head>
 	<body>
 		<div id="site">
