--- a/trunk/templates/bkp/static/jquery.treeview.css
+++ b/trunk/templates/bkp/static/jquery.treeview.css
@@ -9,6 +9,11 @@
 	margin-top: 4px;
 }
 
+.treeview input {
+    float: left;
+    margin-right: 30px;
+}
+
 .treeview .hitarea {
 	background: url(/static/imagens/treeview-default.gif) -64px -25px no-repeat;
 	height: 16px;
@@ -63,6 +68,6 @@
 
 .filetree li { padding: 3px 0 2px 16px; }
 .filetree span.folder, .filetree span.file { padding: 1px 0 1px 16px; display: block; }
-.filetree span.folder { background: url(/static/imagens/folder.gif) 0 0 no-repeat; }
-.filetree li.expandable span.folder { background: url(/static/imagens/folder-closed.gif) 0 0 no-repeat; }
-.filetree span.file { background: url(/static/imagens/file.gif) 0 0 no-repeat; }
+.filetree span.folder { background: url(/static/imagens/folder.gif) 24px 0 no-repeat; }
+.filetree li.expandable span.folder { background: url(/static/imagens/folder-closed.gif) 24px 0 no-repeat; }
+.filetree span.file { background: url(/static/imagens/file.gif) 24px 0 no-repeat; }
