--- a/trunk/templates/bkp/view/view_computer.html
+++ b/trunk/templates/bkp/view/view_computer.html
@@ -17,6 +17,7 @@
 	<div class="bloco_texto escondido" id="detalhes_computador">
 	    <div class="titulo_botoes">
 		<div class="botao_acoes">
+	        <button onclick="location.href='{{script_name}}/{{comp.dump_url}}'"><span>Dump</span></button>
 	        <form action="{{script_name}}/{{comp.run_test_url}}" method="post">
 	            <button type="submit"><span>Testar Conexão</span></button>
 	        </form>
@@ -24,10 +25,12 @@
 		</div>
 
 	    <ul class="aux">
-	        <li><strong class="label">IP:</strong> <span class="value">{{ comp.ip }}</span></li>
-	        <li><strong class="label">Descrição:</strong> <span class="value">{{ comp.description }}</span></li>
+	        <li><strong class="label">IP:</strong> <span class="value">{{ comp.computer_ip }}</span></li>
+	        <li><strong class="label">Sistema Operacional:</strong> <span class="value">{{ comp.computer_so }}</span></li>
+	        <li><strong class="label">Descrição:</strong> <span class="value">{{ comp.computer_description }}</span></li>
 	        <li><strong class="label">Status:</strong> <span class="value">{{ compstatus }}</span></li>
-	        <li><strong class="label">Password:</strong> <span class="value">{{ comp.fd_password }}</span></li>
+	        <li><strong class="label">Password:</strong> <span class="value">{{ comp.computer_password }}</span></li>
+	        <li><strong class="label">Encriptação:</strong> <span class="value">{{ comp.computer_encryption }}</span></li>
 	    </ul>
 	</div>
 
